--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -49,6 +49,7 @@ sphinx-epytext==0.0.4
 sphinx-rtd-theme==0.5.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-fulltoc==1.2.0
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
