--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,62 +1,56 @@
 alabaster==0.7.12
-attrs==20.3.0
-Babel==2.9.0
-bleach==3.3.0
-build==0.3.1.post1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-colorama==0.4.4
-cryptography==3.4.7
-docutils==0.17
-flake8==3.9.0
-gitdb==4.0.7
-GitPython==3.1.14
-idna==2.10
-imagesize==1.2.0
-importlib-metadata==3.10.0
+attrs==22.1.0
+Babel==2.10.3
+bleach==5.0.1
+build==0.8.0
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+commonmark==0.9.1
+cryptography==37.0.4
+docutils==0.17.1
+flake8==5.0.4
+idna==3.3
+imagesize==1.4.1
+importlib-metadata==4.12.0
 iniconfig==1.1.1
-jeepney==0.6.0
-Jinja2==2.11.3
-keyring==23.0.1
-m2r==0.2.1
-MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-packaging==20.9
-pep517==0.10.0
-pkginfo==1.7.0
-pluggy==0.13.1
-py==1.10.0
-pycodestyle==2.7.0
-pycparser==2.20
-pyflakes==2.3.1
-Pygments==2.8.1
-pyparsing==2.4.7
-pytest==6.2.3
-pytz==2021.1
-readme-renderer==29.0
-requests==2.25.1
+jeepney==0.8.0
+Jinja2==3.1.2
+keyring==23.8.2
+MarkupSafe==2.1.1
+mccabe==0.7.0
+packaging==21.3
+pep517==0.13.0
+pkginfo==1.8.3
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.9.1
+pycparser==2.21
+pyflakes==2.5.0
+Pygments==2.12.0
+pyparsing==3.0.9
+pytest==7.1.2
+pytz==2022.1
+readme-renderer==36.0
+requests==2.28.1
 requests-toolbelt==0.9.1
-rfc3986==1.4.0
-SecretStorage==3.3.1
-six==1.15.0
-smmap==4.0.0
-snowballstemmer==2.1.0
-Sphinx==3.5.3
-sphinx-autodocgen==1.2
+rfc3986==2.0.0
+rich==12.5.1
+SecretStorage==3.3.2
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==5.1.1
+sphinx-autodocgen==1.3
 sphinx-epytext==0.0.4
-sphinx-rtd-theme==0.5.1
+sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-fulltoc==1.2.0
-sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-toml==0.10.2
-tqdm==4.59.0
-twine==3.4.1
-urllib3==1.26.4
+sphinxcontrib-serializinghtml==1.1.5
+tomli==2.0.1
+twine==4.0.1
+urllib3==1.26.11
 webencodings==0.5.1
-zipp==3.4.1
+zipp==3.8.1
