Added TextEdit usecases (copy on select, cur=ctrl+x)

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,4 +48,5 @@ jobs:
         # Download the input test
         mkdir -p tmp
         wget -O tmp/test.input.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.001.bin
+        pytest tests/pytest/test_002_textedit.py
         pytest tests/pytest/test_001_demo.py
