--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,5 +48,6 @@ jobs:
         # Download the input test
         mkdir -p tmp
         wget -O tmp/test.input.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.001.bin
+        pytest tests/pytest/test_003_string.py
         pytest tests/pytest/test_002_textedit.py
         pytest tests/pytest/test_001_demo.py
