--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,6 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['3.8', '3.9', '3.10']
 
@@ -49,6 +50,9 @@ jobs:
         mkdir -p tmp
         wget -O tmp/test.input.001.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.001.bin
         wget -O tmp/test.input.002.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.002.bin
-        pytest tests/pytest/test_003_string.py
-        pytest tests/pytest/test_002_textedit.py
-        pytest tests/pytest/test_001_demo.py
+        # To fix a folder permissin issue let's try to run the test from /tmp
+        DDDD=$(pwd)
+        cd /tmp
+        pytest ${DDDD}/tests/pytest/test_003_string.py
+        pytest ${DDDD}/tests/pytest/test_002_textedit.py
+        pytest ${DDDD}/tests/pytest/test_001_demo.py
