Added vscode debug profile

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,14 @@
             "console": "integratedTerminal",
             "justMyCode": true,
         },{
+            "name": "Python: TTk Designer Quick",
+            "type": "python",
+            "request": "launch",
+            "module": "ttkDesigner",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["experiments/MenuBar.03.tui.json"]
+        },{
             "name": "Python: Demo",
             "type": "python",
             "request": "launch",
