tuned the game for the release on itch.io

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # other
 tests/test.dummy.py
 *.swp
+*.zip
+*.tgz
 tmp
 profiler.*
 .vscode/*
@@ -16,6 +18,7 @@ experiments
 sandbox
 !tests/sandbox
 node_modules
+Varie
 
 # VizTracker default file
 result.json
