--- a/tests/sandbox/Makefile
+++ b/tests/sandbox/Makefile
@@ -4,7 +4,7 @@ testSandbox:
 	python3 -m http.server --directory ./
 
 www:
-	mkdir -p www/pyodide www/xterm/ www/xterm-addon-fit www/codemirror www/codemirror/theme www/codemirror/modes www/fontawesome www/w2ui www/webfonts www/nerdfonts
+	mkdir -p www/pyodide www/xterm/ www/xterm-addon-fit www/codemirror www/codemirror/theme www/codemirror/modes www/fontawesome www/w2ui www/webfonts www/fonts/nerdfonts
 
 	wget  -P www/pyodide/   https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/pyodide/pyodide.js
 	wget  -P www/pyodide/   https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/pyodide/python_stdlib.zip
@@ -25,8 +25,8 @@ www:
 	wget  -P www/fontawesome/   https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/fontawesome/fontawesome.min.css
 
 	wget  -P www/webfonts/      https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/webfonts/fa-regular-400.woff2
-	wget  -P www/nerdfonts/     https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/nerdfonts/HurmitNerdFontMono-Regular.otf
-	wget  -P www/nerdfonts/     https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/nerdfonts/DejaVuSansMNerdFont-Regular.ttf
+	wget  -P www/fonts/nerdfonts/     https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/nerdfonts/HurmitNerdFontMono-Regular.otf
+	wget  -P www/fonts/nerdfonts/     https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/nerdfonts/DejaVuSansMNerdFont-Regular.ttf
 
 	wget  -P www/w2ui/   https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/w2ui/w2ui-2.0.min.js
 	wget  -P www/w2ui/   https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/w2ui/w2ui-2.0.min.css
@@ -43,6 +43,7 @@ updateXterm: www
 	npm install xterm
 	npm install xterm-addon-fit
 	npm install xterm-addon-unicode11
+	npm install xterm-addon-canvas
 	cp node_modules/xterm/css/xterm.css \
 	   node_modules/xterm/lib/xterm.js \
 	   node_modules/xterm/lib/xterm.js.map \
@@ -52,6 +53,9 @@ updateXterm: www
 	   www/xterm-addon-unicode11/
 	cp node_modules/xterm-addon-fit/lib/xterm-addon-fit.js \
 	   node_modules/xterm-addon-fit/lib/xterm-addon-fit.js.map \
+	   www/xterm-addon-fit/
+	cp node_modules/xterm-addon-canvas/lib/xterm-addon-canvas.js \
+	   node_modules/xterm-addon-canvas/lib/xterm-addon-canvas.js.map \
 	   www/xterm-addon-fit/
 	rm -rf node_modules package.json package-lock.json
 
