--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -54,6 +54,7 @@ jobs:
         mkdir -p tmp
         wget -O tmp/test.input.001.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.001.bin
         wget -O tmp/test.input.002.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.002.bin
+        wget -O tmp/test.input.003.bin https://github.com/ceccopierangiolieugenio/binaryRepo/raw/master/pyTermTk/tests/test.input.003.bin
         pytest ${DDDD}/tests/pytest/test_003_string.py
         pytest ${DDDD}/tests/pytest/test_002_textedit.py
         pytest ${DDDD}/tests/pytest/test_001_demo.py
