--- a/tests/sandbox/Makefile
+++ b/tests/sandbox/Makefile
@@ -68,6 +68,7 @@ buildSandbox: www
 	find ../../tmp/TermTk/  -name "*.py" | sed 's,.*tmp/,,' | sort | xargs tar cvzf bin/TermTk.tgz -C ../../tmp
 	find ../../tutorial -name "*.py" | sort | xargs tar cvzf bin/tutorial.tgz
 	find ../../demo/paint.py ../../demo/ttkode.py ../../demo/demo.py ../../demo/showcase/*.* | sort | xargs tar cvzf bin/demo.tgz
+	find ../../tests/ansi.images.json ../../tests/t.ui/*.* | sort | xargs tar cvzf bin/tests.tgz
 
 buildTestSandbox: www
 	rm -rf bin
@@ -78,3 +79,4 @@ buildTestSandbox: www
 	find ../../TermTk/  -name "*.py" | sort | xargs tar cvzf bin/TermTk.tgz
 	find ../../tutorial -name "*.py" | sort | xargs tar cvzf bin/tutorial.tgz
 	find ../../demo/paint.py ../../demo/ttkode.py ../../demo/demo.py ../../demo/showcase/*.* | sort | xargs tar cvzf bin/demo.tgz
+	find ../../tests/ansi.images.json ../../tests/t.ui/*.* | sort | xargs tar cvzf bin/tests.tgz
