--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,56 +1,74 @@
-alabaster==0.7.12
-attrs==22.1.0
-Babel==2.10.3
-bleach==5.0.1
-build==0.8.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-commonmark==0.9.1
-cryptography==37.0.4
-docutils==0.17.1
-flake8==5.0.4
-idna==3.3
+accessible-pygments==0.0.5
+alabaster==1.0.0
+babel==2.16.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.12.3
+build==1.2.2.post1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
+css-html-js-minify==2.5.5
+docutils==0.21.2
+flake8==7.1.1
+furo==2024.8.6
+idna==3.10
 imagesize==1.4.1
-importlib-metadata==4.12.0
-iniconfig==1.1.1
+importlib_metadata==8.5.0
+iniconfig==2.0.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
 jeepney==0.8.0
-Jinja2==3.1.2
-keyring==23.8.2
-MarkupSafe==2.1.1
+Jinja2==3.1.4
+keyring==25.4.1
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
-packaging==21.3
-pep517==0.13.0
-pkginfo==1.8.3
-pluggy==1.0.0
-py==1.11.0
-pycodestyle==2.9.1
-pycparser==2.21
-pyflakes==2.5.0
-Pygments==2.12.0
-pyparsing==3.0.9
-pytest==7.1.2
-pytz==2022.1
-readme-renderer==36.0
-requests==2.28.1
-requests-toolbelt==0.9.1
+mdurl==0.1.2
+more-itertools==10.5.0
+nh3==0.2.18
+packaging==24.1
+piccolo_theme==0.24.0
+pkginfo==1.10.0
+pluggy==1.5.0
+pycodestyle==2.12.1
+pycparser==2.22
+pydata-sphinx-theme==0.16.0
+pyflakes==3.2.0
+Pygments==2.18.0
+pyproject_hooks==1.2.0
+pytest==8.3.3
+python-slugify==8.0.4
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==12.5.1
-SecretStorage==3.3.2
-six==1.16.0
+rich==13.9.3
+SecretStorage==3.3.3
 snowballstemmer==2.2.0
-Sphinx==5.1.1
+soupsieve==2.6
+Sphinx==8.1.3
 sphinx-autodocgen==1.3
+sphinx-basic-ng==1.0.0b2
+sphinx-book-theme==1.1.3
 sphinx-epytext==0.0.4
-sphinx-rtd-theme==1.0.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+sphinx-material==0.0.36
+sphinx-rtd-theme==3.0.1
+sphinx-wagtail-theme==6.3.0
+sphinx_press_theme==0.9.1
+sphinxawesome-theme==5.3.1
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-tomli==2.0.1
-twine==4.0.1
-urllib3==1.26.11
-webencodings==0.5.1
-zipp==3.8.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+text-unidecode==1.3
+twine==5.1.1
+typing_extensions==4.12.2
+Unidecode==1.3.8
+urllib3==2.2.3
+zipp==3.20.2
