--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Current File",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
         },{
             "name": "Python: Test Player",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
@@ -21,18 +22,25 @@
             "args": ["-p", "tmp/test.input.bin"]
         },{
             "name": "Python: TTk Designer",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "ttkDesigner",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "./tools"
+            }
+
         },{
             "name": "Python: TTk Designer Quick",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "ttkDesigner",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "./tools"
+            },
             "args": ["ttkDesigner/tui/newWindow.tui.json"]
         },{
             "name": "Python: DumbPaintTool",
@@ -40,7 +48,10 @@
             "request": "launch",
             "program": "tools/dumbPaintTool.py",
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "./tools"
+            }
         },{
             "name": "Python: DumbPaintTool File",
             "type": "debugpy",
@@ -48,6 +59,9 @@
             "program": "tools/dumbPaintTool.py",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "./tools"
+            },
             "args":["experiments/untitled.DPT.json"]
         },{
             "name": "Python: Demo",
@@ -58,7 +72,7 @@
             "justMyCode": true
         },{
             "name": "Python: Demo Mouse tracking",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "demo/demo.py",
             "console": "integratedTerminal",
