--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,7 +63,7 @@
             "name": "Python: DumbPaintTool",
             "type": "debugpy",
             "request": "launch",
-            "program": "tools/dumbPaintTool.py",
+            "program": "apps/dumbPaintTool.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "env": {
@@ -73,7 +73,7 @@
             "name": "Python: DumbPaintTool File",
             "type": "debugpy",
             "request": "launch",
-            "program": "tools/dumbPaintTool.py",
+            "program": "apps/dumbPaintTool.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "env": {
