--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
+            "name": "Python Debugger: Attach",
+            "type": "debugpy",
+            "request": "attach",
+            "connect": {
+              "host": "localhost",
+              "port": 64321
+            }
+        },{
             "name": "Python: Current File",
             "type": "debugpy",
             "request": "launch",
