--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,5 @@
 {
-    "TermTk":"0.40.0a",
-    "apps/ttkDesigner":"0.40.0a",
-    "apps/dumbPaintTool":"0.40.0a"
+    "TermTk":"0.40.0-a.0",
+    "apps/ttkDesigner":"0.40.0-a.0",
+    "apps/dumbPaintTool":"0.40.0-a.0"
 }
