chore: fix deploy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,8 +56,8 @@ jobs:
         run: |
           mkdir -p tmp
           find TermTk/  -name "*.py" |
-            sort | xargs tar cvzf tmp/TermTk.tgz -C ../../tmp
-          find tutorial -name '*.py' -o -name '*.json' |
+            sort | xargs tar cvzf tmp/TermTk.tgz
+          find tutogit checkou  rial -name '*.py' -o -name '*.json' |
             sort | xargs tar cvzf tmp/tutorial.tgz
           find \
             demo/paint.py \
