--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -33,8 +33,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
         run: |
-          git clone ceccopierangiolieugenio/pyTermTk-Docs
-          cd pyTermTk-Docs
+          git clone ceccopierangiolieugenio/pyTermTk-docs
+          cd pyTermTk-docs
           echo "Test - $(date)" > test.txt
           git add .
           git commit -m "chore: added file - ($(date))"
