--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           git config --global user.name 'Eugenio Parodi - Action'
           git config --global user.email 'ceccopierangioliegenio@googlemail.com'
-          git fetch ${{ fromJson(steps.release-please.outputs.pr).headBranchName }}
+          git fetch origin/${{ fromJson(steps.release-please.outputs.pr).headBranchName }}
           git checkout ${{ fromJson(steps.release-please.outputs.pr).headBranchName }}
           _VERSION=$(jq .TermTk .release-please-manifest.json)
           sed "s|version:str.*|version:str = '${_VERSION}'|" \
