--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,9 +56,11 @@ jobs:
             pyTermTk.new
           cd pyTermTk.new
           _VERSION=$(jq .TermTk .release-please-manifest.json)
-          sed "s|version:str.*|version:str = '${_VERSION}'|" \
-              -i TermTk/__init__.py
-          git add TermTk/__init__.py
+          sed -i \
+            "s|version:str.*|version:str = ${_VERSION}|" \
+            TermTk/TTkCore/cfg.py \
+            TermTk/__init__.py
+          git add TermTk/TTkCore/cfg.py TermTk/__init__.py
           git commit -m "chore: updated version to ${_VERSION}"
           git push
 
