chore: trigger doc only on a release

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,14 +2,17 @@ name: Gen Docs
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - 'TermTk/**'
-      - 'docs/**'
-      - 'tests/**'
-      - 'tutorial/**'
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'TermTk/**'
+  #     - 'docs/**'
+  #     - 'tests/**'
+  #     - 'tutorial/**'
+  release:
+    types:
+      - created # Trigger the workflow when a release is created
 
 permissions:
   contents: write
