--- a/.github/workflows/release_sandbox.yml
+++ b/.github/workflows/release_sandbox.yml
@@ -1,4 +1,4 @@
-name: Gen Docs
+name: Release Sandbox
 
 on:
   workflow_dispatch:
@@ -29,10 +29,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.sha }}
-      - name: Gen Docs
-        run: |
-          echo "Generating Docs"
-          make doc
+
       - name: clone pyTermTk-docs
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
@@ -42,16 +39,5 @@ jobs:
           git clone https://${GITHUB_TOKEN}@github.com/ceccopierangiolieugenio/pyTermTk-Docs.git
           cd pyTermTk-Docs
           git fetch --all
-          git checkout docs
-          cp -a \
-            ../docs/source/_build/html/* \
-            ../docs/source/_build/html/.buildinfo \
-            ../docs/source/_build/html/.nojekyll \
-            .
-          git add --all
-          git commit -m "chore: updated docs - ($(date))"
-          git push --force origin docs
-          git checkout gh-pages
-          git reset --hard initial-commit
-          git merge docs -m "chore: merged docs - ($(date))"
-          git push --force origin gh-pages
+
+          echo Release Sandbox
